[gd_scene load_steps=7 format=2]

[ext_resource path="res://CompleteScripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://CompleteScene/Panda.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 63.0317

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 4 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1089.38, 943.75 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 7.0
height = 4.0

[node name="enemy" type="KinematicBody2D"]
position = Vector2( 4, 0 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5.79327, -5.90784 )
rotation = -0.00265737
scale = Vector2( 0.738031, 0.621871 )
texture = ExtResource( 2 )
hframes = 5
vframes = 8

[node name="EnemyDetection" type="Area2D" parent="."]
visible = false
position = Vector2( 3.05176e-05, 1.52588e-05 )

[node name="Shape" type="CollisionShape2D" parent="EnemyDetection"]
visible = false
position = Vector2( -3.05176e-05, -1.52588e-05 )
shape = SubResource( 1 )

[node name="Effect" type="Tween" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0

[node name="Shape" type="CollisionShape2D" parent="Hurtbox"]
visible = false
position = Vector2( -1.5, 0 )
shape = SubResource( 2 )

[node name="WaterDetection" type="Area2D" parent="."]
visible = false
position = Vector2( -510, -300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterDetection"]
visible = false
position = Vector2( 506, 304 )
shape = SubResource( 5 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_mask = 0

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource( 4 )

[node name="Hitbox2" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="NestDetection" type="Area2D" parent="."]
visible = false
position = Vector2( -510, -300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NestDetection"]
visible = false
position = Vector2( 510, 300 )
shape = SubResource( 5 )

[connection signal="body_entered" from="WaterDetection" to="." method="_on_WaterDetection_body_entered"]
[connection signal="body_exited" from="WaterDetection" to="." method="_on_WaterDetection_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="NestDetection" to="." method="_on_NestDetection_body_entered"]
[connection signal="body_exited" from="NestDetection" to="." method="_on_NestDetection_body_exited"]
